# editor.sk

./: CMakeLists.txt  README  README.md
examples/: sample.sk  sample2.sk
src/: main.cpp  main.h
src/menu/: menuActionsList.cpp  menuActionsList.h  menuBar.cpp  menuBar.h  menuBarActions.cpp  menuBarActions.h
src/ui/css/: cssLoader.cpp  cssLoader.h  default.css  style.css
src/ui/editor/: highlighter.cpp  highlighter.h  highlights.cpp  highlights.h  textEditor.cpp  textEditor.h
src/ui/etc/: error.cpp  error.h  fileBar.cpp  fileBar.h
src/ui/menu/: menuActionsList.cpp  menuBar.cpp  menuBar.h  menuBarActions.cpp  menuBarActions.h
src/util/: loadFile.cpp  loadFile.h  util.cpp  util.h
